fix(html): lists wrapped to agressively

--- a/atrea-webui/plugins/ganymede/box_channel.css
+++ b/atrea-webui/plugins/ganymede/box_channel.css
@@ -1,6 +1,7 @@
 .ganymede_vod_list_div{
   display:flex;
   flex-wrap:wrap;
+  justify-content:left;
 }
 .ganymede_vod_list_div>div{
   width:300px;
